assets/css/styles.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Inter', sans-serif;
  background-color: #101010;
  font-size: 1.3rem;
  color: white;
  cursor: none;
  overflow: hidden;
}

#cursor {
  display: none;
  position: fixed;
  width: 1.4rem;
  height: 1.4rem;
  border-radius: 50%;
  pointer-events: none;
  transform: translate(-50%, -50%);
  background-color: #FFFFFF;
  mix-blend-mode: difference;
}

@media (max-width: 768px) {
  #cursor {
    display: none;
    overflow: auto;
  }
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  padding: 2rem;
  box-sizing: border-box;
}

.intro {
  text-align: left;
  width: 100%;
  max-width: 37rem;
}

.heading-primary {
  font-weight: 600;
  font-size: 3.5rem;
  margin: 1rem 0;
}

.heading-secondary {
  font-weight: normal;
  font-size: 2.75rem;
  margin: 1rem 0;
}

.intro p {
  line-height: 1.6;
  margin: 1rem 0;
  margin-bottom: 1.5rem;
}

.greeting-wrapper {
  height: 50px;
  overflow: hidden;
  position: relative;
}

.greeting-wrapper h2 {
  position: absolute;
  width: 100%;
  margin: 0;
  line-height: 50px;
  font-size: 40px;
  font-weight: 400;
  animation: slideUp 7.5s infinite linear;
  opacity: 0;
}

@keyframes slideUp {

  0%,
  100% {
    transform: translateY(100%);
    opacity: 0;
  }

  5%,
  25% {
    transform: translateY(-15%);
    opacity: 1;
  }

  25%,
  30% {
    transform: translateY(5%);
    opacity: 1;
  }

  35%,
  60% {
    transform: translateY(-100%);
    opacity: 0;
  }
}

.greeting-wrapper h2:nth-child(2) {
  animation-delay: 2.5s;
}

.greeting-wrapper h2:nth-child(3) {
  animation-delay: 5s;
}

.buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: start;
  gap: 1.25rem;
}

.home-button {
  width: 5.5rem;
  height: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  background-color: #2A2A2A80;
  color: #FFFFFF;
  border: none;
  cursor: none;
  border-radius: 10px;
  text-decoration: none;
  transition: background-color 0.3s ease;
  mix-blend-mode: difference;
}


.home-button:hover {
  background-color: #404040;
}

